--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -65,6 +65,10 @@
             android:icon="@drawable/ic_square_oxygen"
             android:title="Oxygen" />
         <item
+            android:id="@+id/nav_phlox"
+            android:icon="@drawable/ic_square_phlox"
+            android:title="Phlox" />
+        <item
             android:id="@+id/nav_pixelBlue"
             android:icon="@drawable/ic_square_pixel"
             android:title="Pixel Blue" />
