Added Teal theme Bugfixes

--- a/app/src/main/res/layout/fragment_greensunset.xml
+++ b/app/src/main/res/layout/fragment_greensunset.xml
@@ -124,16 +124,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cardView4" />
+
                 <android.support.v7.widget.CardView
                     android:id="@+id/cardView5"
                     android:layout_width="0dp"
                     android:layout_height="110dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
                     android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="10dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -149,12 +150,12 @@
                             android:id="@+id/textView14"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
                             android:layout_marginStart="16dp"
+                            android:layout_marginLeft="16dp"
                             android:layout_marginTop="8dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginBottom="16dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:text="@string/similar_themes"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -164,54 +165,93 @@
                             app:layout_constraintVertical_bias="0.0" />
 
                         <ImageView
-                            android:id="@+id/imageView6"
+                            android:id="@+id/imageView4"
                             android:layout_width="50dp"
                             android:layout_height="55dp"
-                            android:layout_marginBottom="50dp"
-                            android:layout_marginEnd="50dp"
-                            android:layout_marginLeft="152dp"
-                            android:layout_marginRight="50dp"
-                            android:layout_marginStart="152dp"
+                            android:layout_marginStart="50dp"
+                            android:layout_marginLeft="50dp"
                             android:layout_marginTop="35dp"
+                            android:layout_marginEnd="42dp"
+                            android:layout_marginRight="42dp"
+                            android:layout_marginBottom="50dp"
                             android:onClick="openMint"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/imageView7"
+                            app:layout_constraintEnd_toStartOf="@+id/textView15"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView14"
                             app:srcCompat="@drawable/ic_square_mint" />
 
                         <ImageView
-                            android:id="@+id/imageView7"
+                            android:id="@+id/imageView6"
                             android:layout_width="50dp"
                             android:layout_height="55dp"
-                            android:layout_marginBottom="50dp"
-                            android:layout_marginEnd="152dp"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="152dp"
-                            android:layout_marginStart="50dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="35dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="50dp"
                             android:onClick="openMonster"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/imageView6"
-                            app:layout_constraintTop_toBottomOf="@+id/cardView6"
+                            app:layout_constraintEnd_toEndOf="@+id/textView14"
+                            app:layout_constraintStart_toStartOf="@+id/textView14"
+                            app:layout_constraintTop_toBottomOf="@+id/textView14"
                             app:srcCompat="@drawable/ic_square_monster" />
+
+                        <ImageView
+                            android:id="@+id/imageView7"
+                            android:layout_width="50dp"
+                            android:layout_height="55dp"
+                            android:layout_marginStart="42dp"
+                            android:layout_marginLeft="42dp"
+                            android:layout_marginTop="35dp"
+                            android:layout_marginEnd="50dp"
+                            android:layout_marginRight="50dp"
+                            android:layout_marginBottom="50dp"
+                            android:onClick="openTeal"
+                            android:scaleType="fitCenter"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/textView15"
+                            app:layout_constraintTop_toBottomOf="@+id/cardView6"
+                            app:srcCompat="@drawable/ic_square_teal" />
+
+                        <TextView
+                            android:id="@+id/textView22"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="15dp"
+                            android:fontFamily="@font/timeburnernormal"
+                            android:gravity="center"
+                            android:onClick="openMint"
+                            android:text="MINT"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/imageView4"
+                            app:layout_constraintStart_toStartOf="@+id/imageView4"
+                            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
                         <TextView
                             android:id="@+id/textView15"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="15dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="5dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="15dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:onClick="openMint"
-                            android:text="MINT"
+                            android:gravity="center"
+                            android:onClick="openMonster"
+                            android:text="MONSTER"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/imageView6"
@@ -222,16 +262,16 @@
                             android:id="@+id/textView16"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="15dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="5dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="15dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
-                            android:onClick="openMonster"
-                            android:text="MONSTER"
+                            android:onClick="openTeal"
+                            android:text="TEAL"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/imageView7"
@@ -242,11 +282,11 @@
                             android:id="@+id/cardView6"
                             android:layout_width="0dp"
                             android:layout_height="2dp"
-                            android:layout_marginBottom="7dp"
-                            android:layout_marginEnd="25dp"
-                            android:layout_marginLeft="25dp"
-                            android:layout_marginRight="25dp"
                             android:layout_marginStart="25dp"
+                            android:layout_marginLeft="25dp"
+                            android:layout_marginEnd="25dp"
+                            android:layout_marginRight="25dp"
+                            android:layout_marginBottom="7dp"
                             app:cardBackgroundColor="#6b6b6b"
                             app:cardCornerRadius="0dp"
                             app:cardElevation="0dp"
