--- a/app/src/main/res/layout/fragment_teal.xml
+++ b/app/src/main/res/layout/fragment_teal.xml
@@ -36,7 +36,7 @@
                     android:layout_height="324dp"
                     android:layout_marginTop="15dp"
                     android:scaleType="centerInside"
-                    android:src="@drawable/mint"
+                    android:src="@drawable/teal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -45,15 +45,15 @@
                     android:id="@+id/textView13"
                     android:layout_width="wrap_content"
                     android:layout_height="39dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="84dp"
-                    android:layout_marginLeft="84dp"
-                    android:layout_marginRight="84dp"
                     android:layout_marginStart="84dp"
+                    android:layout_marginLeft="84dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="84dp"
+                    android:layout_marginRight="84dp"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
-                    android:text="ABTheme MINT"
-                    android:textColor="#a5d6a7"
+                    android:text="ABTheme TEAL"
+                    android:textColor="#009788"
                     android:textSize="26sp"
                     app:layout_constraintBottom_toTopOf="@+id/cardView4"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -65,15 +65,15 @@
                     android:id="@+id/cardView4"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="85dp"
-                    android:layout_marginLeft="85dp"
-                    android:layout_marginRight="85dp"
                     android:layout_marginStart="85dp"
+                    android:layout_marginLeft="85dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="85dp"
+                    android:layout_marginRight="85dp"
+                    android:layout_marginBottom="8dp"
                     android:onClick="downloadParser"
-                    android:tag="3"
-                    app:cardBackgroundColor="#a5d6a7"
+                    android:tag="21"
+                    app:cardBackgroundColor="#009788"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="15dp"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -90,14 +90,14 @@
                             android:id="@+id/textView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
-                            android:text="@string/version_mint"
+                            android:text="@string/version_teal"
                             android:textColor="#000"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -111,14 +111,14 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:fontFamily="@font/timeburnernormal"
                     android:gravity="center"
-                    android:text="@string/lastUpdate_mint"
+                    android:text="@string/lastUpdate_teal"
                     android:textSize="14sp"
 
                     app:layout_constraintEnd_toEndOf="parent"
@@ -192,13 +192,13 @@
                             android:layout_marginEnd="8dp"
                             android:layout_marginRight="8dp"
                             android:layout_marginBottom="50dp"
-                            android:onClick="openMonster"
+                            android:onClick="openMint"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/textView14"
                             app:layout_constraintStart_toStartOf="@+id/textView14"
                             app:layout_constraintTop_toBottomOf="@+id/textView14"
-                            app:srcCompat="@drawable/ic_square_monster" />
+                            app:srcCompat="@drawable/ic_square_mint" />
 
                         <ImageView
                             android:id="@+id/imageView7"
@@ -210,13 +210,13 @@
                             android:layout_marginEnd="50dp"
                             android:layout_marginRight="50dp"
                             android:layout_marginBottom="50dp"
-                            android:onClick="openTeal"
+                            android:onClick="openMonster"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/textView15"
                             app:layout_constraintTop_toBottomOf="@+id/cardView6"
-                            app:srcCompat="@drawable/ic_square_teal" />
+                            app:srcCompat="@drawable/ic_square_monster" />
 
                         <TextView
                             android:id="@+id/textView22"
@@ -250,8 +250,8 @@
                             android:layout_marginBottom="15dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
-                            android:onClick="openMonster"
-                            android:text="MONSTER"
+                            android:onClick="openMint"
+                            android:text="MINT"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/imageView6"
@@ -308,16 +308,16 @@
         android:id="@+id/imageView5"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginLeft="172dp"
-        android:layout_marginRight="172dp"
         android:layout_marginStart="172dp"
+        android:layout_marginLeft="172dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginRight="172dp"
+        android:layout_marginBottom="8dp"
         android:onClick="openDrawer"
         app:layout_constraintBottom_toTopOf="@+id/cardViewImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_square_mint" />
+        app:srcCompat="@drawable/ic_square_teal" />
 
 </android.support.constraint.ConstraintLayout>
