--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,7 +97,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="#DF00FF"
+                app:cardBackgroundColor="#009788"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/news1Card"
@@ -134,11 +134,12 @@
                 android:id="@+id/news1Card"
                 android:layout_width="0dp"
                 android:layout_height="145dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                app:cardBackgroundColor="#101010"
                 app:cardCornerRadius="14dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -151,8 +152,7 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/wallphlox" />
+                    android:scaleType="centerCrop" />
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -174,18 +174,18 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="1.0"
-                        app:srcCompat="@drawable/ic_square_phlox" />
+                        app:srcCompat="@drawable/ic_square_teal" />
 
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="20dp"
                         android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:text="@string/news1Content"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
@@ -197,12 +197,12 @@
                         android:id="@+id/cardView"
                         android:layout_width="56dp"
                         android:layout_height="26dp"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="28dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
-                        android:layout_marginTop="28dp"
-                        android:onClick="openPhlox"
-                        app:cardBackgroundColor="#DF00FF"
+                        android:layout_marginBottom="16dp"
+                        android:onClick="openTeal"
+                        app:cardBackgroundColor="#009788"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -217,12 +217,12 @@
                                 android:id="@+id/textView8"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="1dp"
-                                android:layout_marginEnd="1dp"
-                                android:layout_marginLeft="1dp"
-                                android:layout_marginRight="1dp"
                                 android:layout_marginStart="1dp"
+                                android:layout_marginLeft="1dp"
                                 android:layout_marginTop="1dp"
+                                android:layout_marginEnd="1dp"
+                                android:layout_marginRight="1dp"
+                                android:layout_marginBottom="1dp"
                                 android:fontFamily="@font/timeburnernormal"
                                 android:text="@string/view"
                                 android:textColor="#000"
@@ -239,14 +239,14 @@
                         android:id="@+id/textView10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="20"
+                        android:tag="21"
                         android:text="@string/download"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/cardView"
@@ -267,7 +267,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="#fff87000"
+                app:cardBackgroundColor="#DF00FF"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/news2Card"
@@ -323,7 +323,7 @@
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/wallautumn" />
+                    app:srcCompat="@drawable/wallphlox" />
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -344,7 +344,7 @@
                         app:layout_constraintHorizontal_bias="0.15"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_square_autumn" />
+                        app:srcCompat="@drawable/ic_square_phlox" />
 
                     <TextView
                         android:id="@+id/textView9"
@@ -371,8 +371,8 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="16dp"
-                        android:onClick="openAutumn"
-                        app:cardBackgroundColor="#fff87000"
+                        android:onClick="openPhlox"
+                        app:cardBackgroundColor="#DF00FF"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -415,7 +415,7 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="19"
+                        android:tag="20"
                         android:text="@string/download"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/cardView2"
@@ -435,7 +435,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="#F84F43"
+                app:cardBackgroundColor="#fff87000"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/news3Card"
@@ -490,7 +490,7 @@
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/wallredleaf" />
+                    app:srcCompat="@drawable/wallautumn" />
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -511,7 +511,7 @@
                         app:layout_constraintHorizontal_bias="0.15"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_square_redleaf" />
+                        app:srcCompat="@drawable/ic_square_autumn" />
 
                     <TextView
                         android:id="@+id/textView13"
@@ -538,8 +538,8 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="16dp"
-                        android:onClick="openRedleaf"
-                        app:cardBackgroundColor="#F84F43"
+                        android:onClick="openAutumn"
+                        app:cardBackgroundColor="#fff87000"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -582,7 +582,7 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="18"
+                        android:tag="19"
                         android:text="@string/download"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/cardView4"
