1/6th of the new navigation UI - Featuring new HomePage

--- a/app/src/main/res/layout/fragment_pixel.xml
+++ b/app/src/main/res/layout/fragment_pixel.xml
@@ -45,15 +45,15 @@
                     android:id="@+id/textView13"
                     android:layout_width="wrap_content"
                     android:layout_height="39dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="84dp"
-                    android:layout_marginLeft="84dp"
-                    android:layout_marginRight="84dp"
                     android:layout_marginStart="84dp"
+                    android:layout_marginLeft="84dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="84dp"
+                    android:layout_marginRight="84dp"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/timeburnernormal"
                     android:text="ABTheme PIXEL"
-                    android:textColor="#5e97f6"
+                    android:textColor="@color/pixelBlue"
                     android:textSize="26sp"
                     app:layout_constraintBottom_toTopOf="@+id/cardView4"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -65,15 +65,15 @@
                     android:id="@+id/cardView4"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="85dp"
-                    android:layout_marginLeft="85dp"
-                    android:layout_marginRight="85dp"
                     android:layout_marginStart="85dp"
+                    android:layout_marginLeft="85dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="85dp"
+                    android:layout_marginRight="85dp"
+                    android:layout_marginBottom="8dp"
                     android:onClick="downloadParser"
                     android:tag="15"
-                    app:cardBackgroundColor="#5e97f6"
+                    app:cardBackgroundColor="@color/pixelBlue"
                     app:cardCornerRadius="12dp"
                     app:cardElevation="15dp"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -90,12 +90,12 @@
                             android:id="@+id/textView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="8dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:text="@string/version_pixelBlue"
                             android:textColor="#000"
@@ -111,11 +111,11 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:fontFamily="@font/timeburnernormal"
                     android:gravity="center"
                     android:text="@string/lastUpdate_pixelBlue"
@@ -129,12 +129,12 @@
                     android:id="@+id/cardView5"
                     android:layout_width="0dp"
                     android:layout_height="110dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="10dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -150,12 +150,12 @@
                             android:id="@+id/textView14"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
                             android:layout_marginStart="16dp"
+                            android:layout_marginLeft="16dp"
                             android:layout_marginTop="8dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginBottom="16dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:text="@string/similar_themes"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -168,12 +168,12 @@
                             android:id="@+id/imageView6"
                             android:layout_width="50dp"
                             android:layout_height="55dp"
-                            android:layout_marginBottom="50dp"
-                            android:layout_marginEnd="50dp"
-                            android:layout_marginLeft="152dp"
-                            android:layout_marginRight="50dp"
                             android:layout_marginStart="152dp"
+                            android:layout_marginLeft="152dp"
                             android:layout_marginTop="35dp"
+                            android:layout_marginEnd="50dp"
+                            android:layout_marginRight="50dp"
+                            android:layout_marginBottom="50dp"
                             android:onClick="openCyanogen"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -186,12 +186,12 @@
                             android:id="@+id/imageView7"
                             android:layout_width="50dp"
                             android:layout_height="55dp"
-                            android:layout_marginBottom="50dp"
-                            android:layout_marginEnd="152dp"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="152dp"
                             android:layout_marginStart="50dp"
+                            android:layout_marginLeft="50dp"
                             android:layout_marginTop="35dp"
+                            android:layout_marginEnd="152dp"
+                            android:layout_marginRight="152dp"
+                            android:layout_marginBottom="50dp"
                             android:onClick="openOxygen"
                             android:scaleType="fitCenter"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -204,12 +204,12 @@
                             android:id="@+id/textView15"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="15dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="5dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="15dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
                             android:onClick="openCyanogen"
@@ -224,12 +224,12 @@
                             android:id="@+id/textView16"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="15dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_marginTop="5dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginBottom="15dp"
                             android:fontFamily="@font/timeburnernormal"
                             android:gravity="center"
                             android:onClick="openOxygen"
@@ -244,11 +244,11 @@
                             android:id="@+id/cardView6"
                             android:layout_width="0dp"
                             android:layout_height="2dp"
-                            android:layout_marginBottom="7dp"
-                            android:layout_marginEnd="25dp"
-                            android:layout_marginLeft="25dp"
-                            android:layout_marginRight="25dp"
                             android:layout_marginStart="25dp"
+                            android:layout_marginLeft="25dp"
+                            android:layout_marginEnd="25dp"
+                            android:layout_marginRight="25dp"
+                            android:layout_marginBottom="7dp"
                             app:cardBackgroundColor="#6b6b6b"
                             app:cardCornerRadius="0dp"
                             app:cardElevation="0dp"
