--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,14 @@
     <color name="oxygen">#45a5f2</color>
     <color name="pixelBlue">#5e97f6</color>
 
+    <color name="au">#ffcc2e</color>
+    <color name="autumn">#f87000</color>
+    <color name="lolchat">#c89b3a</color>
+    <color name="orange">#f9961f</color>
+
     <color name="phlox">#df00ff</color>
+    <color name="saints">#7c31be</color>
+
     <color name="invInferno">#bb052d</color>
     <color name="aospextended">#21ef8b</color>
     <color name="steam">#324056</color>
